# telek

./: .env.example  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/cicd/: SKILL.md
.claude/skills/cicd/scripts/: pr-status.sh  workflow.sh
.claude/skills/communicate/: SKILL.md
.claude/skills/outsource/prompts/: explore.md  review.md  write.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.claude/skills/telegram/: SKILL.md
.claude/skills/telegram/scripts/: pin.sh  roster.sh  send.sh
.github/workflows/: publish.yml  tests.yml
docs/: skill-sources.md
docs/superpowers/plans/: 2026-05-18-telegram-integration.md
docs/superpowers/specs/: 2026-05-18-telegram-integration-design.md
telegram_agent/: __init__.py  __main__.py
telegram_agent/cli/: __init__.py  _errors.py  _output.py
telegram_agent/cli/_commands/: bot.py  explain.py  group.py  learn.py  whoami.py
telegram_agent/telegram/: __init__.py  _client.py  _config.py  _errors.py  _plan.py
telek/: __init__.py  __main__.py
telek/cli/: __init__.py  _errors.py  _output.py
telek/cli/_commands/: bot.py  explain.py  group.py  learn.py  whoami.py
telek/telegram/: __init__.py  _client.py  _config.py  _errors.py
tests/: fakes.py  test_cli.py  test_client.py  test_config.py  test_errors.py  test_plan.py  test_telegram_cli.py  test_telegram_live.py
