[project]
name = "telek"
version = "0.3.0"
description = "Agent-first Telegram community management tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Chat",
    "Intended Audience :: Developers",
]
dependencies = []

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21,<22"]

[project.urls]
Homepage = "https://github.com/agentculture/telek"
Issues = "https://github.com/agentculture/telek/issues"

[project.scripts]
telek = "telek.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telek"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
]

[tool.coverage.run]
source = ["telek"]
omit = ["telek/__pycache__/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["telek"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: tests that hit the real Telegram Bot API (opt-in: set TELEK_LIVE_TEST_USER_CHAT and TELEK_LIVE_TEST_GROUP_CHAT)",
]
